--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+#Ignore the compiled files from app directory
+app/*/*.js
+app/*/*.js.map
